--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,16 @@ body {
     text-wrap: balance;
   }
 }
+
+html,
+body,
+#__next {
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+}
+
+* {
+  box-sizing: border-box;
+}
