--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,3 +44,47 @@ body,
 * {
   box-sizing: border-box;
 }
+
+
+.tooltip-right {
+  top: -5px;
+  left: 105%;
+}
+
+.tooltip-left {
+  top: -5px;
+  right: 105%;
+}
+
+.tooltip-top {
+  bottom: 105%;
+  left: 0;
+}
+
+.tooltip-bottom {
+  top: -105%;
+  left: 0;
+}
+
+.tooltip_element {
+  position: relative;
+}
+
+.tooltip {
+  position: absolute;
+  background-color: #4F5D75;
+  color: white;
+  padding: 5px;
+  border-radius: 5px;
+  opacity: 0;
+  transition: opacity 1s;
+  top: 0;
+  left: 80px;
+  width: max-content;
+  font-size:12px;
+  z-index: 3;
+}
+
+.tooltip_element:hover .tooltip {
+  opacity: 0.9;
+}
